// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleRecord normalize should deserialize Date 1`] = `
Object {
  "entities": Object {
    "ArticleEntity": Object {
      "5": ArticleEntity {
        "author": "",
        "content": "",
        "id": "5",
        "title": "",
      },
    },
  },
  "entityMeta": Object {
    "ArticleEntity": Object {
      "5": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "createdAt": 2020-06-07T02:00:15.000Z,
    "nextPage": "blob",
    "requiredArticle": "5",
  },
}
`;

exports[`SimpleRecord normalize should use default when Date not provided 1`] = `
Object {
  "entities": Object {
    "ArticleEntity": Object {
      "5": ArticleEntity {
        "author": "",
        "content": "",
        "id": "5",
        "title": "",
      },
    },
  },
  "entityMeta": Object {
    "ArticleEntity": Object {
      "5": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "nextPage": "blob",
    "requiredArticle": "5",
  },
}
`;

exports[`SimpleRecord normalize should work on nested 1`] = `
Object {
  "entities": Object {
    "ArticleEntity": Object {
      "5": ArticleEntity {
        "author": "5",
        "content": "",
        "id": "5",
        "title": "happy",
      },
    },
  },
  "entityMeta": Object {
    "ArticleEntity": Object {
      "5": Object {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "data": "5",
    "lastPage": "abc",
    "nextPage": "slksfd",
  },
}
`;
